--- a/IMOBILIARIA-SANTOS/index.html
+++ b/IMOBILIARIA-SANTOS/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-    <!--Primeira+
-         Sação-->
+    <!--Primeira Sação-->
     <header>
         <img src="IMG/logo.png" alt="Logo da Imobiliaria">
         <nav>
@@ -42,6 +41,47 @@
             Oferecemos um <span>serviço de qualidade</span> servindo como ponte entre as partes interessadas.</p>
     </section>
 
+    <!--Quarta seção-->
+    <section>
+        <h2>SERVIÇOS</h2>
+        <p>Contamos com diversos <span>serviços imobiliários</span> e também prestamos suporte em cada uma das etapas
+            necessárias de cada serviço. Aqui na <span>Imobiliária Santos</span> podemos te ajudar com a seguinte gama
+            de assuntos relativos a imóveis:
+        </p>
+        <ul>
+            <li>Vendas</li>
+            <li>Aluguel</li>
+            <li>Financiamento</li>
+            <li>Parceiras</li>
+        </ul>
+    </section>
+
+    <!--Qunita seção-->
+    <section>
+        <h2>CORRETORES</h2>
+        <img src="img/corretores.jpg" alt="Corretores">
+        <p>A <span>imobiliária Santos</span> conta com um time de profissionais qualificados que têm vários anos de
+            experiência no mercado. Para entrar em contato com um de nossos corretores, basta clicar no link a seguir:
+            <a href="mailto:corretores@email.com">Corretores</a>
+        </p>
+    </section>
+
+    <!--Sexta Seção-->
+    <section>
+        <h2>CONTATO</h2>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.1168143961777!2d-43.36308168535197!3d-22.98273154636252!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9bda2ed54ec2e1%3A0x4431d262cad1d163!2sAv.%20Ayrton%20Senna%2C%203000%20-%20Barra%20da%20Tijuca%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2022775-904!5e0!3m2!1spt-BR!2sbr!4v1677702868086!5m2!1spt-BR!2sbr"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <p>Se ficou interessado em nos conhecer ou se tiver dúvidas entre em <span class="texto-destaque">contato</span>
+            conosco através de um dos telefones abaixo:</p>
+        <ul>
+            <li><a href="#Escritório Barra da Tijuca">Escritório Barra da Tijuca</a></li>
+            <li><a href="#Escritorio_centro/rj">Escritorio Centro/Rj</a></li>
+            <li><a href="#escritorio_meie">Escritorio Méie</a></li>
+            <li><a href=" #fale-conosco">Fale Conosco</a></li>
+        </ul>
+    </section>
 </body>
 
 </html>
